# Life-On-Canvas

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.bf75139  DataBaseUML.drawio  README.md  frame.h  main.cpp
.github/workflows/: CIforDB.yml
API/: tryNotToDieAPI.yml
LifeOnCanvas/: CMakeLists.txt  main.cpp  mainscene.cpp  mainscene.h  mainview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
UML/: DataBaseUML.drawio
canvasController/: CMakeLists.txt  canvasController.cpp  canvasController.h
client/: CMakeLists.txt
client/canvasController/: CMakeLists.txt  canvasController.cpp  canvasController.h
client/graphicsItem/: CMakeLists.txt  graphicsItem.cpp  graphicsItem.h
client/networkController/: networkController.cpp  networkController.h
client/point/: CMakeLists.txt  lineItem.cpp  lineItem.h  point.cpp  point.h
client/serializer/: CMakeLists.txt  serializer.cpp  serializer.h
frame/: CMakeLists.txt  frame.h
headers/: brush.h  bucket.h  colorpicker.h  ellipse.h  eraser.h  line.h  pencil.h  rect.h  tool.h  triangle.h
main/: main.cpp
networkController/: CMakeLists.txt  networkController.cpp
serializer/: CMakeLists.txt  serializer.cpp  serializer.h
src/: CMakeLists.txt
src/include/: callbacks.h  deserializer.h  listener.h  request_handler.h  thread_controller.h  utility.h  websocket_session.h
src/server/: CMakeLists.txt  callbacks.cpp  deserializer.cpp  http_session.cpp  http_session.h  listener.cpp  listener.h  request_handler.cpp  server.cpp  thread_controller.cpp  utility.cpp  websocket_session.cpp  websocket_session.h
storage/: CMakeLists.txt  storage.h
storage/JSONController/: CMakeLists.txt  server-storage.h
storage/SQLController/: CMakeLists.txt  storage.h
storage/graphicsItem/: CMakeLists.txt  GraphicsItem.h
tests/: CMakeLists.txt  GoogleTestsForBD.cpp
uml/: server_uml.drawio
